var hierarchy =
[
    [ "ORB_SLAM2::KeyFrame", "class_o_r_b___s_l_a_m2_1_1_key_frame.html", null ],
    [ "ORB_SLAM2::KeyFrameDatabase", "class_o_r_b___s_l_a_m2_1_1_key_frame_database.html", null ],
    [ "ORB_SLAM2::Map", "class_o_r_b___s_l_a_m2_1_1_map.html", null ],
    [ "ORB_SLAM2::MapPoint", "class_o_r_b___s_l_a_m2_1_1_map_point.html", null ],
    [ "Message", null, [
      [ "SerializedDescriptor", "class_serialized_descriptor.html", null ],
      [ "SerializedFeature", "class_serialized_feature.html", null ],
      [ "SerializedK", "class_serialized_k.html", null ],
      [ "SerializedKArray", "class_serialized_k_array.html", null ],
      [ "SerializedKeyframe", "class_serialized_keyframe.html", null ],
      [ "SerializedKeyframeArray", "class_serialized_keyframe_array.html", null ],
      [ "SerializedKeyframeFeatures", "class_serialized_keyframe_features.html", null ],
      [ "SerializedKeyframeFeaturesArray", "class_serialized_keyframe_features_array.html", null ],
      [ "SerializedKeypoint", "class_serialized_keypoint.html", null ],
      [ "SerializedMappoint", "class_serialized_mappoint.html", null ],
      [ "SerializedMappointArray", "class_serialized_mappoint_array.html", null ],
      [ "SerializedPose", "class_serialized_pose.html", null ],
      [ "SerializedPosition", "class_serialized_position.html", null ]
    ] ],
    [ "ORB_SLAM2::Osmap", "class_o_r_b___s_l_a_m2_1_1_osmap.html", null ],
    [ "ORB_SLAM2::System", "class_o_r_b___s_l_a_m2_1_1_system.html", null ],
    [ "protobuf_osmap_2eproto::TableStruct", "structprotobuf__osmap__2eproto_1_1_table_struct.html", null ],
    [ "ORB_SLAM2::Tracker", "class_o_r_b___s_l_a_m2_1_1_tracker.html", null ]
];